[gd_scene load_steps=8 format=3 uid="uid://5v4gvnur6yb7"]

[ext_resource type="Texture2D" uid="uid://csprjlnwqyv41" path="res://Assets/start/start.jpg" id="1_3bxa3"]
[ext_resource type="Script" uid="uid://cdm6jemkxnhis" path="res://Scenes/startScene.gd" id="1_5ogh5"]
[ext_resource type="AudioStream" uid="uid://5jvxmiq2hg5m" path="res://Assets/start/kliper-zar.wav" id="3_lb6bl"]
[ext_resource type="FontFile" uid="uid://ba2vwgk40v26i" path="res://Assets/fonts/SN_shoshanim.otf" id="4_rk01k"]
[ext_resource type="FontFile" uid="uid://bnbida7kfwdc4" path="res://Assets/fonts/SN_bloom.ttf" id="5_o3wvq"]

[sub_resource type="LabelSettings" id="LabelSettings_5ogh5"]
font_size = 55

[sub_resource type="LabelSettings" id="LabelSettings_rk01k"]
line_spacing = 5.0
font = ExtResource("5_o3wvq")
font_size = 64

[node name="Start" type="Node2D"]
script = ExtResource("1_5ogh5")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_3bxa3")
stretch_mode = 5

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lb6bl")

[node name="LyricsLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1589.0
offset_top = 47.0
offset_right = 1889.0
offset_bottom = 135.0
grow_horizontal = 0
text = "גדכגכגכדכ"
label_settings = SubResource("LabelSettings_5ogh5")
horizontal_alignment = 2

[node name="NextButton" type="Button" parent="."]
offset_left = 778.0
offset_top = 852.0
offset_right = 1067.0
offset_bottom = 972.0
theme_override_fonts/font = ExtResource("4_rk01k")
theme_override_font_sizes/font_size = 120
text = "התחלה"

[node name="Label" type="Label" parent="."]
offset_left = 436.0
offset_top = 380.0
offset_right = 1309.0
offset_bottom = 481.0
text = "עמק ישמעאל והבוף שנעלם"
label_settings = SubResource("LabelSettings_rk01k")
horizontal_alignment = 1

[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
